# ChangeLog for dev-ruby/ruby-pango
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-pango/ChangeLog,v 1.41 2008/04/22 18:30:13 graaff Exp $

  09 Jan 2009; Mark Somerville <gentoo-ruby@scottishclimbs.com>
  +ruby-pango-0.18.1-r1.ebuild:
  Removed rubyee and dropped keywords to testing.

  18 Dec 2008; gentoo-ruby@scottishclimbs.com +metadata.xml,
  +ruby-pango-0.18.1.ebuild:
  Added ebuild for 0.18.1.

  22 Apr 2008; Hans de Graaff <graaff@gentoo.org> -ruby-pango-0.14.1.ebuild,
  -ruby-pango-0.15.0.ebuild:
  Remove old versions

  21 May 2007; Raúl Porcel <armin76@gentoo.org> ruby-pango-0.16.0.ebuild:
  alpha stable wrt #169094

  17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-pango-0.16.0.ebuild:
  stable amd64, bug 169094

  28 Mar 2007; Raúl Porcel <armin76@gentoo.org> ruby-pango-0.16.0.ebuild:
  ia64 stable wrt bug 169094

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  ruby-pango-0.16.0.ebuild:
  Stable on sparc wrt #169094

  04 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-pango-0.16.0.ebuild:
  stable x86; bug 169094

  03 Mar 2007; nixnut <nixnut@gentoo.org> ruby-pango-0.16.0.ebuild:
  Stable on ppc wrt bug 169064

*ruby-pango-0.16.0 (30 Dec 2006)

  30 Dec 2006; Luis Medinas <metalgod@gentoo.org> -ruby-pango-0.10.1.ebuild,
  -ruby-pango-0.11.0.ebuild, -ruby-pango-0.12.0.ebuild,
  +ruby-pango-0.16.0.ebuild:
  Version Bump. Remove older versions.

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> ruby-pango-0.14.1.ebuild:
  Mark 0.14.1 stable on alpha

*ruby-pango-0.15.0 (29 Aug 2006)

  29 Aug 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +ruby-pango-0.15.0.ebuild:
  Version bump

  29 Apr 2006; Simon Stelling <blubb@gentoo.org> ruby-pango-0.14.1.ebuild:
  stable on amd64

  30 Mar 2006; Ferris McCormick <fmccor@gentoo.org>
  ruby-pango-0.14.1.ebuild:
  Stable on sparc (version bump).
