@@ -1,5 +1,4 @@
 DIST ruby-gnome2-all-0.18.1.tar.gz 1501200 RMD160 cd85a0ffcedcd7ca857631f8ff7aba08c98c90e6 SHA1 3d5b3666d1fe2b717c98f68019722a4a144bbc0d SHA256 96ee1e3015299e73ad9d6b0c8d0af3e7a208cff575e953ea832aef9c82a58e4b
-EBUILD ruby-pango-0.18.1-r1.ebuild 468 RMD160 aff2b05fa0c20d9c4e7ad0164f65101859364288 SHA1 231505127b5d78cd4ea87404a7d35f28c6f918e8 SHA256 10abdd102fce12e0786a39ba77760e2fccdba8c1b33142bf538d7d4c32315d16
-EBUILD ruby-pango-0.18.1.ebuild 469 RMD160 6a1f890468c61746487d9f4f60bb4308e4834c36 SHA1 2dcd80fd49c6bd83238d8bfd441ee95229b334f4 SHA256 87179899ae0220987adafa3cc4f3c52a87759550736392492c42039079b7109d
-MISC ChangeLog 5333 RMD160 1949a4aaf4a714cec2eabf7c864c487f3a4e59b8 SHA1 35c20d2e812c37479dc4c497e3e7360b160cf794 SHA256 44b08a357963344b4e933206d0075ad0274a27759f7db6c6a64925af814856b1
+EBUILD ruby-pango-0.18.1-r1.ebuild 587 RMD160 640a36daaf37bd3abdd3a67892f5b010931ab7d1 SHA1 e8f18bce600988680de4e45d12b74806a5a9a499 SHA256 6721081a3a337e7345aee3f0c1244e927e5273c24386fe8c045e0911222fadcc
+MISC ChangeLog 5501 RMD160 d78ce1b164f723fede32cc29a604c32063c57d29 SHA1 3938428be67b33eec6c165f3141a7845735e9a6f SHA256 c84ee300ad1e54fbd96004b42cece086da111d14a9b86911480e91cbd230c26b
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
