@@ -2,6 +2,10 @@
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-pango/ChangeLog,v 1.41 2008/04/22 18:30:13 graaff Exp $
 
+  18 Jan 2009; Alex Legler <a3li@gentoo.org> -ruby-pango-0.18.1.ebuild,
+  ruby-pango-0.18.1-r1.ebuild:
+  Removing invalid stable version, forcing ruby18 for configure
+
   09 Jan 2009; Mark Somerville <gentoo-ruby@scottishclimbs.com>
   +ruby-pango-0.18.1-r1.ebuild:
   Removed rubyee and dropped keywords to testing.
